menu issue resolved

--- a/src/app/modules/admission/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/admission/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -240,13 +240,13 @@
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
                 </mat-icon>
             </button>
-            <button [disabled]="loading || !element.Action || Permission!='rwd'" matTooltip="delete" mat-mini-fab
+            <!-- <button [disabled]="loading || !element.Action || Permission!='rwd'" matTooltip="delete" mat-mini-fab
                 color="accent" (click)="Delete(element)">
                 <mat-icon>delete</mat-icon>
                 <mat-icon *ngIf="loading">
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
                 </mat-icon>
-            </button>
+            </button> -->
         </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
