--- a/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.scss
+++ b/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.scss
@@ -3,7 +3,7 @@ mat-form-field{
     width: 98%;
 }
 
-.mat-column-FeatureName,.mat-column-Action,.mat-column-PermissionId{
+.mat-column-FeatureName,.mat-column-Role,.mat-column-Action,.mat-column-PermissionId{
     flex:1 1 150px;
 }
 .mat-column-Active,.mat-column-ApplicationFeatureRoleId{
