--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -131,7 +131,7 @@
                                 </mat-footer-cell>
                             </ng-container>
                             <ng-container matColumnDef="BaseAmount">
-                                <mat-header-cell *matHeaderCellDef> Fee
+                                <mat-header-cell *matHeaderCellDef> Amount
                                 </mat-header-cell>
                                 <mat-cell *matCellDef="let element">
                                     {{element.BaseAmount}}
