--- a/src/app/modules/EmpAttendance/employeeattendance/employeeattendance.component.html
+++ b/src/app/modules/EmpAttendance/employeeattendance/employeeattendance.component.html
@@ -4,6 +4,12 @@
 <form [formGroup]="searchForm">
     <div style="display:flex;justify-content: space-between;">
         <div>
+            <mat-form-field appearance="outline" [style.width.px]="200">
+                <mat-label>Department</mat-label>
+                <mat-select formControlName="searchDepartment">
+                    <mat-option *ngFor="let item of Departments" [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>
+               </mat-select>
+            </mat-form-field>
             <mat-form-field appearance="outline" [style.width.px]="140">
                 <mat-label>Date</mat-label>
                 <input formControlName="searchAttendanceDate" matInput [matDatepicker]="AttendanceDate"
