--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -123,7 +123,7 @@
                         <a [routerLink]="['/auth/forgot']">Forgot password</a>
                     </div>
                     <div style="margin: 15px 15px 15px 0px;">
-                        New school owner? <a [routerLink]="['/auth/signup']">Sign up</a>
+                        New Organization Owner? <a [routerLink]="['/auth/signup']">Sign up</a>
                     </div>
                     <div *ngIf="f.username.invalid && (f.username.dirty || f.username.touched)"
                         class="alert alert-danger">
