--- a/src/app/modules/control/customfeaturerolepermission/customfeaturerolepermission.component.html
+++ b/src/app/modules/control/customfeaturerolepermission/customfeaturerolepermission.component.html
@@ -1,6 +1,6 @@
 <div>
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Role Feature Permission</strong></div>
+        <div><strong>Custom Feature Permission</strong></div>
     </div>
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <!-- <alert></alert> -->
