--- a/src/app/modules/globaladmininitial/customerplanfeature/customerplanfeature.component.html
+++ b/src/app/modules/globaladmininitial/customerplanfeature/customerplanfeature.component.html
@@ -1,5 +1,5 @@
 <div style="padding:15px 15px 10px 15px;">
-    <div><strong>Plan Feature</strong></div>
+    <div><strong>Customer Plan Feature</strong></div>
 </div>
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <!-- <alert></alert> -->
