--- a/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
+++ b/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
@@ -24,11 +24,41 @@
                         </div>
                     </div>
                 </div>
+                <div style="display:flex;font-size:xx-large;justify-content: center;width:100%;margin:30px"><span>REPORT
+                        CARD</span></div>
+                <div style="margin:0px 0px 10px 20px;width:500px;border-bottom: 1px solid lightgray; font-weight: bold;font-style: italic;">Student's Profile</div>
                 <div *ngFor="let item of StudentName"
-                    style="margin:20px;display: flex;justify-content: center;flex-direction: column;">
-                    <div><b>Name</b> : {{item.Name}}</div>
-                    <div><b>Class </b>: {{item.Class}}, <b>Section</b> : {{item.Section}}, <b>Roll No.</b> :
-                        {{item.RollNo}}
+                    style="margin-left: 20px;display: flex;justify-content: center;flex-direction: column;">
+                    <div style="display:flex">
+                        <div style="width:300px"><b>Name</b> :</div>
+                        <div>{{item.Name}}</div>
+                    </div>
+                    <div style="display:flex">
+                        <div style="width:300px"><b>Class </b>:</div>
+                        <div> {{item.Class}}, <b>Section</b> : {{item.Section}}, <b>Roll No.</b> :
+                            {{item.RollNo}}
+                        </div>
+                    </div>
+                </div>
+                <div style="margin-left: 20px;">
+                    <div style="display:flex;">
+                        <div style="width:300px"><b>Father's/Guardian Name:</b></div>
+                        <div>{{CurrentStudent.FatherName}}</div>
+                    </div>
+                    <div style="display:flex;">
+                        <div style="width:300px"><b>Date Of Birth:</b>
+                        </div>
+                        <div>{{CurrentStudent.DOB|date:'dd/MM/yyyy'}}</div>
+                    </div>
+                    <div style="display:flex;">
+                        <div style="width:300px"><b>House:</b>
+                        </div>
+                        <div>{{CurrentStudent.House}}</div>
+                    </div>
+                    <div style="display:flex;">
+                        <div style="width:300px"><b>Address:</b>
+                        </div>
+                        <div>{{CurrentStudent.PresentAddress}}</div>
                     </div>
                 </div>
                 <div style="margin-top:15px;margin-bottom:15px">
