--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.scss
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.scss
@@ -11,13 +11,15 @@
   .mat-column-ClassFeeId{
     flex: 1 1 70px;
   }
-  
+  .mat-column-Amount,
+  .mat-column-Rate,
+  .mat-column-Quantity,
   .mat-column-Active,
   .mat-column-Action {
-    flex: 1 1 100px;
+    flex: 1 1 80px;
   }
 
-  .mat-column-Amount,
+  
   .mat-column-FeeName,
   .mat-column-Month {
     flex: 1 0 150px;
