--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -76,7 +76,8 @@
                                 <ng-container matColumnDef="Action">
                                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                                     <mat-cell *matCellDef="let element">
-                                        <mat-checkbox [disabled]="loading || (element.TotalDebit!=0 && element.Balance1==0) || Permission=='read'"
+                                        <mat-checkbox
+                                            [disabled]="loading || (element.TotalDebit!=0 && element.Balance1==0) || Permission=='read'"
                                             mat-mini-fab (change)="SelectRow(element,$event)"
                                             [checked]="(element.TotalDebit!=0 && element.Balance1==0)">
                                         </mat-checkbox>
@@ -96,90 +97,112 @@
                     </div>
                     <!-- <div style="background-color: lightgray;width:1px">&nbsp;asdf</div> -->
                     <div style="width:100%; margin: 15px 0px 0px 15px;border: 1px solid lightgray;">
-                        <mat-table [dataSource]="billdataSource">
-                            <ng-container matColumnDef="SlNo">
-                                <mat-header-cell *matHeaderCellDef> Sr.No. </mat-header-cell>
-                                <mat-cell *matCellDef="let element"> {{element.SlNo}} </mat-cell>
-                                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-                            </ng-container>
-                            <ng-container matColumnDef="FeeName">
-                                <mat-header-cell *matHeaderCellDef> Particulars
-                                </mat-header-cell>
-                                <mat-cell *matCellDef="let element">
-                                    <span style="margin-right: 10px;">{{element.FeeName}}</span>
-                                    <div *ngIf="element.AmountEditable==1" style="margin-right: 10px;">
-                                        <mat-form-field style="width: 170px;">
-                                            <input matInput [(ngModel)]="element.ShortText" [value]="element.ShortText"
-                                                autocomplete="Off" [maxlength]="30">
-                                        </mat-form-field>
+                        <div id="invoiceSection" style="display:flex;flex-direction: column;">
+                            <div style="display:flex;justify-content: center;">
+                                <div style="margin-right: 15px;" *ngIf="logourl.length>0" [innerHTML]="logourl"></div>
+                                <div
+                                    style="display:flex;flex-direction: column;justify-content: space-around;margin: 15px;">
+                                    <div style="width:100%;display:flex;justify-content: center;flex-direction: column;"
+                                        *ngFor="let item of ReceiptHeading;let i=index">
+                                        <span [ngStyle]="item.Description" [innerHTML]="item.MasterDataName"></span>
                                     </div>
-                                </mat-cell>
-                                <mat-footer-cell *matFooterCellDef>
-                                    <b>Total</b>
-                                </mat-footer-cell>
-                            </ng-container>
-                            <ng-container matColumnDef="Balance">
-                                <mat-header-cell *matHeaderCellDef style="display:flex;justify-content:center">
-                                    <span>Balance</span>
-                                </mat-header-cell>
-                                <mat-cell *matCellDef="let element" style="padding-right:15px;">
-                                    {{element.Balance}}
-                                </mat-cell>
-                                <mat-footer-cell *matFooterCellDef
-                                    style="display:flex;justify-content:flex-end;padding-right: 15px;">
-                                    {{Balance}}
-                                </mat-footer-cell>
-                            </ng-container>
-                            <ng-container matColumnDef="BaseAmount">
-                                <mat-header-cell *matHeaderCellDef> Amount
-                                </mat-header-cell>
-                                <mat-cell *matCellDef="let element">
-                                    {{element.BaseAmount}}
-                                </mat-cell>
-                                <mat-footer-cell *matFooterCellDef style="display:flex;justify-content:center">
-                                </mat-footer-cell>
-                            </ng-container>
-                            <ng-container matColumnDef="Amount">
-                                <mat-header-cell *matHeaderCellDef style="justify-content: center;"> Payable Amount
-                                </mat-header-cell>
-                                <mat-cell *matCellDef="let element" style="justify-content: end;">
-                                    <mat-form-field>
-                                        <input style="text-align: right" (keyup)="onBlur(element)"
-                                            [disabled]="element.AmountEditable==0 || element.FeeName=='Discount'" matInput max="100000"
-                                            [(ngModel)]="element.Amount" [value]="element.Amount" [maxlength]="5"
-                                            autocomplete="Off">
-                                    </mat-form-field>
-                                </mat-cell>
-                                <mat-footer-cell *matFooterCellDef
-                                    style="display:flex;justify-content:flex-end;padding-right: 15px;">
-                                    {{ TotalAmount}}
-                                </mat-footer-cell>
-                            </ng-container>
-                            <ng-container matColumnDef="Action">
-                                <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                                <mat-cell *matCellDef="let element">
-                                    <button matTooltip="remove item" [disabled]="loading || element.BaseAmount>0 || Permission=='read'" mat-mini-fab (click)="remove(element)">
-                                        <mat-icon>cancel</mat-icon>
-                                    </button>
-                                </mat-cell>
-                                <mat-footer-cell *matFooterCellDef>
+                                </div>
+                            </div>
+                            <div
+                                style="display:flex;flex-direction: column;justify-content: space-around;margin: 15px;">
+                                <div style="font-weight: bold;">Bill To</div>
+                                <mat-divider style="width:250px;position: relative;"></mat-divider>
+                                <div style="width:100%;display:flex;justify-content: center;flex-direction: column;"
+                                    *ngFor="let item of CustomerHeading;let i=index">
+                                    <span [ngStyle]="item.Description" [innerHTML]="item.Text"></span>
+                                </div>
+                            </div>
+                            <mat-table [dataSource]="billdataSource">
+                                <ng-container matColumnDef="SlNo">
+                                    <mat-header-cell *matHeaderCellDef> Sr.No. </mat-header-cell>
+                                    <mat-cell *matCellDef="let element"> {{element.SlNo}} </mat-cell>
+                                    <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+                                </ng-container>
+                                <ng-container matColumnDef="FeeName">
+                                    <mat-header-cell *matHeaderCellDef> Particulars
+                                    </mat-header-cell>
+                                    <mat-cell *matCellDef="let element">
+                                        <span style="margin-right: 10px;">{{element.FeeName}}</span>
+                                        <div *ngIf="element.AmountEditable==1" style="margin-right: 10px;">
+                                            <mat-form-field style="width: 170px;">
+                                                <input matInput [(ngModel)]="element.ShortText"
+                                                    [value]="element.ShortText" autocomplete="Off" [maxlength]="30">
+                                            </mat-form-field>
+                                        </div>
+                                    </mat-cell>
+                                    <mat-footer-cell *matFooterCellDef>
+                                        <b>Total</b>
+                                    </mat-footer-cell>
+                                </ng-container>
+                                <ng-container matColumnDef="Balance">
+                                    <mat-header-cell *matHeaderCellDef style="display:flex;justify-content:center">
+                                        <span>Balance</span>
+                                    </mat-header-cell>
+                                    <mat-cell *matCellDef="let element" style="padding-right:15px;">
+                                        {{element.Balance}}
+                                    </mat-cell>
+                                    <mat-footer-cell *matFooterCellDef
+                                        style="display:flex;justify-content:flex-end;padding-right: 15px;">
+                                        {{Balance}}
+                                    </mat-footer-cell>
+                                </ng-container>
+                                <ng-container matColumnDef="BaseAmount">
+                                    <mat-header-cell *matHeaderCellDef> Amount
+                                    </mat-header-cell>
+                                    <mat-cell *matCellDef="let element">
+                                        {{element.BaseAmount}}
+                                    </mat-cell>
+                                    <mat-footer-cell *matFooterCellDef style="display:flex;justify-content:center">
+                                    </mat-footer-cell>
+                                </ng-container>
+                                <ng-container matColumnDef="Amount">
+                                    <mat-header-cell *matHeaderCellDef style="justify-content: center;"> Payable Amount
+                                    </mat-header-cell>
+                                    <mat-cell *matCellDef="let element" style="justify-content: end;">
+                                        <mat-form-field>
+                                            <input style="text-align: right" (keyup)="onBlur(element)"
+                                                [disabled]="element.AmountEditable==0 || element.FeeName=='Discount'"
+                                                matInput max="100000" [(ngModel)]="element.Amount"
+                                                [value]="element.Amount" [maxlength]="5" autocomplete="Off">
+                                        </mat-form-field>
+                                    </mat-cell>
+                                    <mat-footer-cell *matFooterCellDef
+                                        style="display:flex;justify-content:flex-end;padding-right: 15px;">
+                                        {{ TotalAmount}}
+                                    </mat-footer-cell>
+                                </ng-container>
+                                <ng-container matColumnDef="Action" class="HideInPrint">
+                                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                                    <mat-cell *matCellDef="let element">
+                                        <button matTooltip="remove item"
+                                            [disabled]="loading || element.BaseAmount>0 || Permission=='read'"
+                                            mat-mini-fab (click)="remove(element)">
+                                            <mat-icon>cancel</mat-icon>
+                                        </button>
+                                    </mat-cell>
+                                    <mat-footer-cell *matFooterCellDef>
 
-                                </mat-footer-cell>
-                            </ng-container>
-                            <mat-header-row *matHeaderRowDef="billDisplayedColumns"></mat-header-row>
-                            <mat-row *matRowDef="let row; columns: billDisplayedColumns;" class="element-row">
-                            </mat-row>
-                            <mat-footer-row class="sticky-footer" *matFooterRowDef="billDisplayedColumns">
-                            </mat-footer-row>
-                        </mat-table>
-                        
+                                    </mat-footer-cell>
+                                </ng-container>
+                                <mat-header-row *matHeaderRowDef="billDisplayedColumns"></mat-header-row>
+                                <mat-row *matRowDef="let row; columns: billDisplayedColumns;" class="element-row">
+                                </mat-row>
+                                <mat-footer-row class="sticky-footer" *matFooterRowDef="billDisplayedColumns">
+                                </mat-footer-row>
+                            </mat-table>
+                        </div>
                         <div style="display:flex;justify-content: space-evenly;width:100%; padding: 25px;">
                             <span>
                                 <mat-form-field style="width: 150px;margin-right: 15px;">
                                     <mat-label>Offline receipt no.</mat-label>
                                     <input matInput [maxlength]="20" [(ngModel)]="OffLineReceiptNo"
                                         [value]="OffLineReceiptNo" autocomplete="Off">
-                                </mat-form-field>                               
+                                </mat-form-field>
                                 <mat-form-field style="width: 150px;">
                                     <mat-label>Payment Type</mat-label>
                                     <mat-select [(ngModel)]="PaymentTypeId" [value]="PaymentTypeId"
@@ -215,7 +238,12 @@
                                 </button>
                             </span>
                         </div>
-                        
+                        <div style="margin: 15px;display: flex;justify-content: center;">
+                            <button [disabled]="loading" matTooltip="print" printSectionId="invoiceSection"
+                                [useExistingCss]="true" ngxPrint class="mat-raised-button">
+                                <mat-icon>print</mat-icon>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </mat-tab>
