--- a/src/app/modules/attendance/attendancepercent/attendancepercent.component.html
+++ b/src/app/modules/attendance/attendancepercent/attendancepercent.component.html
@@ -49,7 +49,7 @@
     </div>
 </form>
 <div id="printSection">
-    <mat-table #table [dataSource]="dataSource" matSort>
+    <mat-table #table [dataSource]="dataSource" matSort style="max-width: 650px;">
         <ng-container matColumnDef="ClassName">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Class
             </mat-header-cell>
