--- a/src/app/modules/attendance/attendancecount/attendancecount.component.html
+++ b/src/app/modules/attendance/attendancecount/attendancecount.component.html
@@ -32,7 +32,7 @@
         </mat-icon>
     </button>
 </form>
-<mat-table #table [dataSource]="dataSource" matSort>
+<mat-table #table [dataSource]="dataSource" matSort style="max-width: 450px;">
     <ng-container matColumnDef="ClassName">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Class
         </mat-header-cell>
