--- a/src/app/modules/attendance/studentattendancereport/studentattendancereport.component.html
+++ b/src/app/modules/attendance/studentattendancereport/studentattendancereport.component.html
@@ -43,11 +43,11 @@
         </mat-icon>
     </button>
 </form>
-<div style="margin-right: 15px;">
+<div style="margin-right: 15px;" *ngIf="StudentAttendanceList.length>0">
     <div id="printSection">
         <mat-table #table [dataSource]="dataSource" matSort>
             <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                <mat-header-cell *matHeaderCellDef
+                <mat-header-cell *matHeaderCellDef mat-sort-header
                     [ngStyle]="{'background-color':disCol.includes('Sun') || disCol.includes('Sat')?'#ffffe8':''}"
                     style="display:flex;justify-content:center;padding: 0px 2px 0px 3px;">
                     <!-- <div style="justify-content: flex-start;margin-bottom: 10px;display:flex;flex-direction: column;"> -->
@@ -71,13 +71,14 @@
         </mat-table>
     </div>
 </div>
+
+<mat-paginator [hidden]="StudentAttendanceList.length==0" style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,20,50,100]"></mat-paginator>
 <div style="margin-top:15px;display:flex;justify-content: center;">
     <button [disabled]="loading || Permission=='read'" *ngIf="StudentAttendanceList.length>0" matTooltip="print"
         printSectionId="printSection" [useExistingCss]="true" ngxPrint mat-raised-button color="accent">
         <mat-icon>print</mat-icon>
     </button>
 </div>
-<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,20,50,100]"></mat-paginator>
 <div style="margin-top:30px;" data-expand="false" #expandWrap>
     <span *ngIf="expandWrap.dataset.expand == 'false'" (click)="expandWrap.dataset.expand = 'true'">
         <mat-icon>info</mat-icon>
