--- a/src/app/modules/schoolreports/printprogressreport/printprogressreport.component.html
+++ b/src/app/modules/schoolreports/printprogressreport/printprogressreport.component.html
@@ -36,23 +36,77 @@
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
                 </mat-icon>
             </button>
+            <!-- <div style="display:flex;justify-content:center;width:100%;margin:5px"> -->
+                <button *ngIf="NonGradedMarkResults.length>0 || GradedMarksResults.length>0" [disabled]="loading"
+                    matTooltip="print" printSectionId="printSection" [useExistingCss]="true" ngxPrint mat-raised-button
+                    color="accent">
+                    <mat-icon>print</mat-icon>
+                </button>
+                <!-- <button [disabled]="loading || Permission=='read'" matTooltip="print"
+                        *ngIf="NonGradedMarkResults.length>0 || GradedMarksResults.length>0"
+                        (click)="print()" mat-raised-button color="accent">
+                        <mat-icon>print</mat-icon>
+                    </button> -->
+            <!-- </div> -->
         </form>
         <div id="printSection">
             <div *ngFor="let data of NonGradedDataSourceArray;let indx=index;"
-                style="margin-right:0px;margin-left:0px;width: 100%;box-sizing: border-box;padding: 15px; border: 1px solid lightgray; display: flex; justify-content: center;flex-direction: column;">
-                 <div style="display: flex;justify-content: center;width:100%;flex-direction: column;">
+                style="page-break-before: always; margin-right:0px;margin-left:0px;width: 100%;box-sizing: border-box;padding: 15px; border: 1px solid lightgray; display: flex; justify-content: center;flex-direction: column;">
+                 <!-- <div style="display: flex;justify-content: center;width:100%;flex-direction: column;">
                     <div *ngFor="let item of CommonHeader" [innerHTML]="item.Description|encodeHTML"
                         style="display: flex;justify-content: center;">
                     </div>
+                </div> -->
+                <div style="display:flex;justify-content: center;">
+                    <div style="margin-right: 15px;" *ngIf="logourl.length>0" [innerHTML]="logourl"></div>
+                    <div style="display: flex;justify-content: center;flex-direction: column;">
+                        <div *ngFor="let item of CommonHeader" [innerHTML]="item.Description|encodeHTML"
+                            style="display: flex;justify-content: center;">
+                        </div>
+                    </div>
                 </div>
-                <!--<div *ngFor="let item of StudentName"
-                    style="margin:20px;display: flex;justify-content: center;flex-direction: column;">
-                    <div><b>Name</b> : {{item.Name}}</div>
-                    <div><b>Class </b>: {{item.Class}}, <b>Section</b> : {{item.Section}}, <b>Roll No.</b> :
-                        {{item.RollNo}}
+                <div style="display:flex;font-size:xx-large;justify-content: center;width:100%;margin:30px"><span>REPORT
+                        CARD</span></div>
+                <div style="margin:20px 0px 10px 20px;width:500px;border-bottom: 1px solid lightgray; font-weight: bold;font-style: italic;">Student's Profile</div>
+                <!-- <div *ngFor="let item of StudentName"
+                    style="margin-left: 20px;display: flex;justify-content: center;flex-direction: column;">
+                    <div style="display:flex">
+                        <div style="width:300px"><b>Name</b> :</div>
+                        <div>{{item.Name}}</div>
+                    </div>
+                    <div style="display:flex">
+                        <div style="width:300px"><b>Class </b>:</div>
+                        <div> {{item.Class}}, <b>Section</b> : {{item.Section}}, <b>Roll No.</b> :
+                            {{item.RollNo}}
+                        </div>
                     </div>
                 </div> -->
-                <div style="margin-top:15px;margin-bottom:15px">
+                <div style="margin-left: 20px;">
+                    <div style="display:flex;">
+                        <div style="width:300px"><b>Name</b></div>
+                        <div>:&nbsp;{{CurrentStudent[indx].Name}}</div>
+                    </div>
+                    <div style="display:flex;">
+                        <div style="width:300px"><b>Father/Guardian</b></div>
+                        <div>:&nbsp;{{CurrentStudent[indx].FatherName}}</div>
+                    </div>
+                    <div style="display:flex;">
+                        <div style="width:300px"><b>Date Of Birth</b>
+                        </div>
+                        <div>:&nbsp;{{CurrentStudent[indx].DOB|date:'dd/MM/yyyy'}}</div>
+                    </div>
+                    <div style="display:flex;">
+                        <div style="width:300px"><b>House</b>
+                        </div>
+                        <div>:&nbsp;{{CurrentStudent[indx].House}}</div>
+                    </div>
+                    <div style="display:flex;">
+                        <div style="width:300px"><b>Address</b>
+                        </div>
+                        <div>:&nbsp;{{CurrentStudent[indx].PresentAddress}}</div>
+                    </div>
+                </div>
+                <div style="margin-top:15px;margin-bottom:0px">
                     <mat-table [dataSource]="getDataSource(data)" matSort
                         *ngIf="NonGradedDisplayColumns.length>1">
                         <ng-container *ngFor="let disCol of NonGradedDisplayColumns; let colIndex = index"
@@ -68,25 +122,25 @@
                         <mat-row *matRowDef="let row; columns: NonGradedDisplayColumns;" class="element-row"></mat-row>
                     </mat-table>
                 </div>
-                <div style="margin-top:15px;margin-bottom:15px" *ngIf="GradedDisplayColumns.length>1">
+                <div style="margin-top:15px;margin-bottom:0px" *ngIf="GradedDisplayColumns.length>1">
                     <div style="margin-left:20px;font-weight:bold">Graded Subjects</div>
                     <mat-table #table [dataSource]="getDataSource(GradedDataSourceArray[indx])" matSort>
                         <ng-container *ngFor="let disCol of GradedDisplayColumns; let colIndex = index"
                             matColumnDef="{{disCol}}">
-                            <mat-header-cell *matHeaderCellDef mat-sort-header>
+                            <!-- <mat-header-cell *matHeaderCellDef style="height:0px">
                                 <span *ngIf="disCol!='Subject'">{{disCol}}</span>
-                            </mat-header-cell>
+                            </mat-header-cell> -->
                             <mat-cell *matCellDef="let element">
                                 <span style="font-weight:bold"
                                     *ngIf="element[disCol]==OverAllGrade">{{element[disCol]}}</span>
                                 <span *ngIf="element[disCol]!=OverAllGrade">{{element[disCol]}}</span>
                             </mat-cell>
                         </ng-container>
-                        <mat-header-row *matHeaderRowDef="GradedDisplayColumns"></mat-header-row>
+                        <!-- <mat-header-row *matHeaderRowDef="GradedDisplayColumns"></mat-header-row> -->
                         <mat-row *matRowDef="let row; columns: GradedDisplayColumns;" class="element-row"></mat-row>
                     </mat-table>
                 </div>
-                <div style="margin-top:15px;margin-bottom:15px">
+                <div style="margin-top:15px;margin-bottom:0px">
                     <mat-table #table [dataSource]="getDataSource(ExamResultArray[indx])" matSort *ngIf="DisplayColumns.length>1">
                         <ng-container *ngFor="let disCol of DisplayColumns; let colIndex = index"
                             matColumnDef="{{disCol}}">
@@ -97,7 +151,7 @@
                                 {{element[disCol]}}
                             </mat-cell>
                         </ng-container>
-                        <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
+                        <!-- <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row> -->
                         <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
                     </mat-table>
                 </div>
@@ -147,17 +201,6 @@
                 </div> -->
             </div>
         </div>
-        <div style="display:flex;justify-content:center;width:100%;margin:5px">
-            <button *ngIf="NonGradedMarkResults.length>0 || GradedMarksResults.length>0" [disabled]="loading"
-                matTooltip="print" printSectionId="printSection" [useExistingCss]="true" ngxPrint mat-raised-button
-                color="accent">
-                <mat-icon>print</mat-icon>
-            </button>
-            <!-- <button [disabled]="loading || Permission=='read'" matTooltip="print"
-                    *ngIf="NonGradedMarkResults.length>0 || GradedMarksResults.length>0"
-                    (click)="print()" mat-raised-button color="accent">
-                    <mat-icon>print</mat-icon>
-                </button> -->
-        </div>
+        
     </mat-card-content>
 </mat-card>
