component fullmark, passmark decimal

--- a/src/app/modules/studentexam/examsubjectmarkentry/examsubjectmarkentry.component.html
+++ b/src/app/modules/studentexam/examsubjectmarkentry/examsubjectmarkentry.component.html
@@ -102,7 +102,8 @@
         <span *ngIf="expandWrap.dataset.expand == 'true'" (click)="expandWrap.dataset.expand = 'false'">
             <ol><b>Settings required before mark entry.</b>
                 <li>Subject Category for each class subjects.</li>
-                <li>Subject mark Components (even for graded subjects).</li>
+                <li>Subject Components (even for graded subjects).</li>
+                <li>Exam Subject Components (even for graded subjects).</li>
                 <li>Student Subjects.</li>
                 <li>Student Grade.</li>
                 <li>Exam N Calculate.</li>
