--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -5,7 +5,7 @@
 }
 
 .width81 {
-    position        : fixed;
+    //position        : fixed;
     z-index         : 10;
     color           : white;
     background-color: #0F5298; // #20639b; //#4f8ec2;//
@@ -16,7 +16,7 @@
 }
 
 .width100 {
-    position           : fixed;
+    //position           : fixed;
     z-index            : 10;
     //color              : white;
     //background-color: #006EDB;
