--- a/src/app/modules/ClassSubject/subjectcomponent/subjectcomponent.component.html
+++ b/src/app/modules/ClassSubject/subjectcomponent/subjectcomponent.component.html
@@ -29,7 +29,7 @@
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
-           
+
             <mat-table #table [dataSource]="dataSource">
                 <ng-container matColumnDef="SubjectComponentId">
                     <mat-header-cell *matHeaderCellDef>Sr. No.
@@ -48,6 +48,21 @@
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="ClassId">
+                    <mat-header-cell *matHeaderCellDef>Class
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field appearance="outline" [style.width.px]="150">
+                            <mat-label>Class</mat-label>
+                            <mat-select [(ngModel)]="element.ClassId" [value]="element.ClassId"
+                                (selectionChange)="RowSelectClassSubject(element)">
+                                <mat-option *ngFor="let item of ClassMasters" [value]="item.ClassId">
+                                    {{item.ClassName}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </mat-cell>
+                </ng-container>
                 <ng-container matColumnDef="ClassSubjectId">
                     <mat-header-cell *matHeaderCellDef>Class Subject
                     </mat-header-cell>
@@ -55,9 +70,19 @@
                         <mat-form-field appearance="outline">
                             <mat-select (selectionChange)="onBlur(element)" [value]="element.ClassSubjectId"
                                 [(ngModel)]="element.ClassSubjectId">
-                                <mat-option *ngFor="let item of ClassSubjectList" [value]="item.ClassSubjectId">
-                                    {{item.ClassSubject}}</mat-option>
+                                <mat-option *ngFor="let item of element.ClassSubjects" [value]="item.ClassSubjectId">
+                                    {{item.SubjectName}}</mat-option>
                             </mat-select>
+                        </mat-form-field>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Sequence">
+                    <mat-header-cell *matHeaderCellDef>Sequence
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field appearance="outline">
+                            <input matInput type="number" (blur)="onBlur(element)" [max]="5" [value]="element.Sequence"
+                                [(ngModel)]="element.Sequence">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -72,13 +97,14 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading || Permission=='read' || Permission=='deny'"
-                            matTooltip="add new" mat-mini-fab (click)="AddNew()">
+                        <button [disabled]="loading || Permission=='read' || Permission=='deny'" matTooltip="add new"
+                            mat-mini-fab (click)="AddNew()">
                             <mat-icon>add</mat-icon>
                         </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <button style="margin-right:15px" [disabled]="loading || !element.Action || Permission=='read' || Permission=='deny'"
+                        <button style="margin-right:15px"
+                            [disabled]="loading || !element.Action || Permission=='read' || Permission=='deny'"
                             matTooltip="save" mat-raised-button color="accent" (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
                             <mat-icon *ngIf="loading">
