--- a/src/app/modules/ClassSubject/subjectcomponent/subjectcomponent.component.scss
+++ b/src/app/modules/ClassSubject/subjectcomponent/subjectcomponent.component.scss
@@ -6,15 +6,12 @@ mat-form-field{
     justify-content: center;
     flex: 1 0 80px;
 }
-.mat-column-Action,.mat-column-GroupName,
-.mat-column-ClassGroupTypeId{
-    justify-content: center;
+.mat-column-Action,.mat-column-ClassId,.mat-column-ComponentName,
+.mat-column-ClassSubjectId{
+  //  justify-content: center;
     flex: 1 0 120px;
 }
-.mat-column-ClassGroupId{
+.mat-column-Sequence,.mat-column-SubjectComponentId{
     flex: 1 0 70px;
 }
 
-.mat-column-Description{
-    flex:1 1 300px;
-}
