--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -3,7 +3,7 @@
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <form [formGroup]="searchForm">
     <div style="display:flex;justify-content: space-between;">
-        <div>
+        <div style="margin-right: 15px;">
             <mat-form-field appearance="outline">
                 <mat-label>Class</mat-label>
                 <mat-select formControlName="searchClassId" (selectionChange)="bindClassSubject()">
@@ -32,7 +32,7 @@
                 </mat-icon>
             </button>
         </div>
-        <div style="display:flex;flex-direction:column;padding:10px 10px 0px 10px; border:1px solid lightgray">
+        <div style="min-width:200px;display:flex;flex-direction:column;padding:10px 10px 0px 10px; border:1px solid lightgray">
             <b>Only for subject wise attendance.</b>
             <mat-form-field appearance="outline">
                 <mat-label>Subject</mat-label>
