--- a/src/app/modules/attendance/studentattendance/studentattendance.component.scss
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.scss
@@ -11,14 +11,14 @@ mat-cell:first-of-type{
 }
 .mat-column-AttendanceStatus,.mat-column-Action{
     justify-content: center;
-    flex:1 1 100px;
+    //flex:1 1 100px;
     min-width: 80px;
 }
 .mat-column-StudentRollNo{
-    flex:1 1 150px;
+    flex:1 0 150px;
     min-width: fit-content;
 }
 .mat-column-Remarks{
     justify-content: center;
-    flex:1 1 150px;
+    flex:1 0 150px;
 }
