--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -35,6 +35,9 @@
                     <button [disabled]="loading" mat-menu-item *ngIf="loggedIn" (click)="changepassword()">
                         <mat-icon>change_circle</mat-icon>Change password
                     </button>
+                    <button [disabled]="loading" mat-menu-item (click)="contactus()">
+                        <mat-icon>contact_support</mat-icon>Contact Us
+                    </button>
                     <button [disabled]="loading" mat-menu-item *ngIf="loggedIn" (click)="logout()">
                         <mat-icon>logout</mat-icon>logout
                     </button>
@@ -48,11 +51,9 @@
         <div style="background-color:#cddc39;height:1px;width:100%"> </div>
         <!-- <div style="background-color:#cddc39;height:11px;width:100%"> </div> -->
     </mat-toolbar-row>
-    <mat-toolbar-row fxShow.gt-xs fxHide.gt-xs
+    <!-- <mat-toolbar-row fxShow.gt-xs fxHide.gt-xs
         style="height: 70px !important;box-shadow: 3px 3px 3px var(--maincolor2);" fxLayout="row wrap"
         fxLayoutAlign="space-between center">
-        <button [disabled]="loading" mat-button (click)="contactus()">
-            <mat-icon>contact_support</mat-icon><span>Contact Us</span>
-        </button>
-    </mat-toolbar-row>
+       
+    </mat-toolbar-row> -->
 </mat-toolbar>
