--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,4 +1,4 @@
-<app-header [deviceXs]="deviceXs" (toggleSideBarForme)="sideBarToggler()"></app-header>
+<app-header *ngIf="displayDiv" #scroller [deviceXs]="deviceXs" (toggleSideBarForme)="sideBarToggler()"></app-header>
 
 <mat-sidenav-container style="margin-top:20px;" class="flex-container" autosize="true">
     <mat-sidenav style="padding: 17px;" [(opened)]="opened" mode="side" (click)="toggleSidebar()">
