fee type confidential added

--- a/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
+++ b/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
@@ -436,6 +436,8 @@
                         <input formControlName="BoardRegistrationNo" (blur)="OnBlur()" autocomplete="Off" matInput
                             [maxlength]="15">
                     </mat-form-field>
+                </div>
+                <div style="padding: 15px 15px 0px 15px">
                     <mat-form-field appearance="outline">
                         <mat-label>Notes</mat-label>
                         <textarea rows="4" cols="20" (blur)="OnBlur()" [maxlength]="50" matInput autocomplete="Off"
