--- a/src/app/modules/classes/school-fee-types/school-fee-types.component.html
+++ b/src/app/modules/classes/school-fee-types/school-fee-types.component.html
@@ -64,6 +64,15 @@
                     </mat-checkbox>
                 </mat-cell>
             </ng-container>
+            <ng-container matColumnDef="Confidential">
+                <mat-header-cell *matHeaderCellDef>Confidential
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateConfidential(element,$event)"
+                        [checked]="element.Confidential">
+                    </mat-checkbox>
+                </mat-cell>
+            </ng-container>
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef style="justify-content: center;">Active
                 </mat-header-cell>
