--- a/src/app/modules/classes/school-fee-types/school-fee-types.component.scss
+++ b/src/app/modules/classes/school-fee-types/school-fee-types.component.scss
@@ -2,7 +2,7 @@
     width: 99%;
     margin-right: 15px;
 }
-.mat-column-Action,.mat-column-DefaultType{
+.mat-column-Action,.mat-column-DefaultType,.mat-column-Confidential{
     justify-content: center;
     flex:0 0 100px;
 }
